--- a/src/components/TicTacToeGame/TicTacToeGame.module.css
+++ b/src/components/TicTacToeGame/TicTacToeGame.module.css
@@ -6,12 +6,13 @@
   gap: 0;
   position: relative; /* Щоб працювали зсуви/зайди */
   margin-top: 84px;
-  margin-bottom: 30px;
+  margin-bottom: 25px;
+  margin-left: -10px;
 }
 @media (max-width: 768px) {
   .wrapper {
     margin-top: 20px; /* або 0px, якщо треба щільно */
-    margin-bottom: 35px; /* як ти просив */
+    margin-bottom: 30px; /* як ти просив */
   }
 
   .playerLeftBlokLeft,
@@ -20,6 +21,7 @@
   }
 
   .gridWrapper {
+    margin-top: 10px;
     width: 220px;
     height: 220px;
   }
@@ -27,8 +29,8 @@
   .grid {
     grid-template-columns: repeat(3, 50px);
     grid-template-rows: repeat(3, 50px);
-    column-gap: 10px;
-    row-gap: 10px;
+    column-gap: 15px;
+    row-gap: 15px;
   }
 
   .cell {
@@ -204,6 +206,7 @@
   width: 260px;
   height: 260px;
   margin: 0 auto;
+  margin-top: 15px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -216,15 +219,6 @@
   column-gap: 20px;
   row-gap: 20px;
   z-index: 3;
-}
-
-.statusWrapper {
-  margin-top: 10px;
-  min-height: 30px; /* резервує місце для тексту/кнопки */
-  display: flex;
-  flex-direction: row-reverse;
-  align-items: center;
-  justify-content: flex-end;
 }
 
 .status {
