--- a/src/components/TicTacToeGame/TicTacToeGame.module.css
+++ b/src/components/TicTacToeGame/TicTacToeGame.module.css
@@ -7,7 +7,7 @@
   position: relative; /* Щоб працювали зсуви/зайди */
   margin-top: 84px;
   margin-bottom: 25px;
-  margin-left: -10px;
+  margin-left: -40px;
 }
 @media (max-width: 768px) {
   .wrapper {
@@ -112,7 +112,7 @@
   letter-spacing: 0%;
   text-align: center;
   vertical-align: middle;
-  margin-bottom: 15px;
+  margin-bottom: 25px;
 }
 
 .icon {
@@ -206,7 +206,7 @@
   width: 260px;
   height: 260px;
   margin: 0 auto;
-  margin-top: 15px;
+  margin-top: 5px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -344,4 +344,42 @@
 .playerIntro {
   animation: floatDown 1s ease-out forwards;
   opacity: 0;
+}
+.winnerHighlight {
+  animation: floatUp 1.2s ease-in-out forwards, glow 2s ease-in-out infinite;
+  position: relative;
+  z-index: 6;
+}
+
+.winEmoji {
+  width: 32px;
+  height: 32px;
+  position: absolute;
+  top: -40px;
+  font-size: 40px;
+  animation: floatEmoji 1.5s ease-in-out;
+  z-index: 10;
+}
+@keyframes floatEmoji {
+  0% {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  50% {
+    opacity: 1;
+    transform: translateY(-5px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes floatUp {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-40px); /* Підіймаємо героя вгору */
+  }
 }
