--- a/src/components/TicTacToeGame/TicTacToeGame.module.css
+++ b/src/components/TicTacToeGame/TicTacToeGame.module.css
@@ -67,6 +67,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
+  background: url("/src/assets/emages/Bacground89256.png") center/cover
+    no-repeat;
 }
 
 .playerRight {
@@ -85,10 +87,10 @@
 .playerRight::after {
   content: "";
   position: absolute;
-  top: 0;
+  top: 10px;
   right: 0;
   width: 3px;
-  height: 100%;
+  height: 246px;
   background: linear-gradient(to bottom, #4b56ef, #9165ff, #e242e4);
   border-radius: 1px;
 }
@@ -97,10 +99,10 @@
 .playerLeftBlokLeft::after {
   content: "";
   position: absolute;
-  top: 0;
+  top: 10px;
   left: 0;
   width: 2px;
-  height: 100%;
+  height: 246px;
   background: linear-gradient(to bottom, #4b56ef, #9165ff, #e242e4);
   border-radius: 1px;
 }
@@ -308,8 +310,8 @@
 .glowingPlayer::before {
   content: "✨✨✨";
   position: absolute;
-  top: -10px;
-  left: -10px;
+  top: -20px;
+  left: -5px;
   font-size: 20px;
   color: #fff8b5;
   animation: twinkle 1.5s ease-in-out infinite;
