--- a/src/pages/GameResultPage/GameResultPage.module.css
+++ b/src/pages/GameResultPage/GameResultPage.module.css
@@ -2,8 +2,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 840px;
-  height: 380px;
+  width: 820px;
+  height: 370px;
   background: url("/src/assets/emages/BacgrBlue.png") center/cover no-repeat;
   display: flex;
   justify-content: center;
@@ -26,11 +26,11 @@
   display: block;
   width: 100%;
   height: auto;
-  margin: 0 auto 16px auto;
+  margin: 10 auto 20px auto;
   font-family: Fredoka;
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 1.3;
+  font-weight: 900;
+  font-size: 20px;
+  line-height: 1.4;
   justify-content: start;
   color: #ffffff;
 }
@@ -38,15 +38,16 @@
   display: block;
   width: 100%;
   height: auto;
-  margin: 0 auto 10px auto;
+  margin: 5 auto 10px auto;
   font-family: Fredoka;
-  font-weight: 600;
+  font-weight: 700;
   font-size: 15px;
-  line-height: 1;
+  line-height: 1.2;
   justify-content: start;
   color: #ffffff;
 }
 .textBtn {
+  margin-top: 5px;
   margin: 10px;
   padding: 10px;
 }
