--- a/src/components/HeroIntro/HeroIntro.module.css
+++ b/src/components/HeroIntro/HeroIntro.module.css
@@ -1,37 +1,43 @@
 .heroWrapper {
-  margin-top: 0px;
+  margin-top: 0;
   width: 110px;
-  height: 110px;
+  height: 250px;
   position: relative;
   display: flex;
-  justify-content: center;
+  flex-direction: column; /* вертикальне розташування */
+  justify-content: flex-start; /* починаємо зверху */
   align-items: center;
+  text-align: center;
   animation: heroIntroMove 1.8s ease-out forwards;
   background-image: url("/src/assets/emages/StarksHeroYour.png");
+  background-repeat: no-repeat;
+  background-position: center;
 }
+
 .heroTitle {
-  width: 64px;
-  height: 18px;
-  margin: auto;
-  padding: auto;
+  margin-top: 20px;
+  margin-bottom: 8px;
   font-family: Fredoka;
   font-weight: 600;
-  font-style: SemiBold;
   font-size: 15px;
   line-height: 1.1;
-  letter-spacing: 0%;
-  vertical-align: middle;
+  text-align: center;
+  color: #fff;
+  z-index: 3; /* щоб текст був над усім */
 }
-.heroImage {
-  width: 44px;
-  height: 44px;
-  opacity: 1;
-  top: 50px;
-  border-radius: 50px;
-  border-width: 6px;
 
+.heroImage {
+  width: 60px;
+  height: 60px;
+  opacity: 1;
+  margin-top: 10px;
+  border-radius: 50%;
   z-index: 2;
   animation: heroPulse 1.5s infinite ease-in-out;
+}
+.heroIcon {
+  font-size: 60px; /* для React-іконок */
+  line-height: 1;
 }
 
 /* Зірки навколо */
