add new audio effect

--- a/src/components/GameSettingsModal/GameSettingsModal.module.css
+++ b/src/components/GameSettingsModal/GameSettingsModal.module.css
@@ -25,7 +25,7 @@
   width: 100%;
   height: auto;
   margin: 2 auto 2px auto;
-  margin-left: 5px;
+  /* margin-left: 5px; */
   font-family: Fredoka;
   font-weight: 1000;
   font-size: 25px;
