--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -36,6 +36,7 @@
     url("/src/assets/emages/GroupFone3.png"),
     url("/src/assets/emages/starcPhon.png"),
     url("/src/assets/audio/sunTuIX.mp3.wav"),
+    url("/src/assets/emages/GroupFone3.png"),
     url("/src/assets/audio/sunTuNull.mp3.wav");
   background-size: cover;
 }
