--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -24,7 +24,7 @@
   transform: translateY(40px); /* зміщення вниз */
   /* background: url("/src/assets/emages/endSong.mp3"); */
 }
-.theme_defaul {
+.them_defaul {
   background-image: url("/src/assets/audio/finalliVin.mp3.wav"),
     url("/src/assets/audio/mixKids.mp3.wav"),
     url("/src/assets/audio/successMixkit.mp3.wav"),
