--- a/src/components/GameSettingsModal/GameSettingsModal.module.css
+++ b/src/components/GameSettingsModal/GameSettingsModal.module.css
@@ -14,8 +14,10 @@
   box-sizing: border-box;
 }
 .blokTitle {
+  margin: 0px;
+  padding: 0px;
   width: 100%;
-  height: auto;
+  height: 350px;
   display: flex;
   flex-direction: column;
   margin-left: 10px;
