--- a/src/components/WinModalMidle/WinModalMidle.module.css
+++ b/src/components/WinModalMidle/WinModalMidle.module.css
@@ -46,9 +46,35 @@
 }
 
 .rectangle {
-  width: 12px;
+  width: 15px;
   height: 6px;
   border-radius: 2px;
+}
+
+.triangle {
+  width: 8px;
+  height: 8px;
+  border-left: 2px solid transparent;
+  border-right: 2px solid transparent;
+  border-bottom: 2px solid orange;
+}
+
+.star {
+  width: 6px;
+  height: 6px;
+  background: yellow;
+  clip-path: polygon(
+    50% 0%,
+    61% 35%,
+    98% 35%,
+    68% 57%,
+    79% 91%,
+    50% 70%,
+    21% 91%,
+    32% 57%,
+    2% 35%,
+    39% 35%
+  );
 }
 
 @keyframes fallConfetti {
