--- a/src/components/WinModalMidle/WinModalMidle.module.css
+++ b/src/components/WinModalMidle/WinModalMidle.module.css
@@ -1,7 +1,7 @@
 /* WinModal.module.css */
 .loadingWrapper {
   position: fixed;
-  top: 5px;
+  top: 0;
   left: 0;
   width: 840px;
   height: 380px;
