--- a/src/components/HeroEffect/HeroEffect.module.css
+++ b/src/components/HeroEffect/HeroEffect.module.css
@@ -9,18 +9,9 @@
   align-items: center;
   text-align: center;
   animation: heroIntroMove 1.8s ease-out forwards;
-  background-image: url("/src/assets/emages/StarksHeroYour.png");
   background-repeat: no-repeat;
   background-position: center;
 }
-.heroImageWrapper {
-  position: relative;
-  width: 60px;
-  height: 60px;
-  margin-top: 0;
-  filter: drop-shadow(0 0 6px #fff8d6);
-}
-
 .heroTitle {
   margin-top: 20px;
   margin-bottom: 1px;
@@ -44,6 +35,54 @@
   z-index: 3; /* щоб текст був над усім */
 }
 
+.heroImageWrapper {
+  position: relative;
+  width: 80px;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center; /* центруємо вміст */
+}
+
+.heroImageWrapper::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 120px; /* розмір світіння */
+  height: 120px;
+  transform: translate(-50%, -50%);
+  background: url("/src/assets/emages/StarksHeroYour.png") center/cover
+    no-repeat;
+  border-radius: 50%;
+  z-index: 1; /* під картинкою */
+}
+
+.heroImage {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  z-index: 2; /* поверх світіння */
+  animation: heroPulse 1.5s infinite ease-in-out;
+}
+
+/* .heroImageWrapper {
+  position: relative;
+  width: 80px;
+  height: 80px;
+  margin-top: 0;
+  background-image: url("/src/assets/emages/StarksHeroYour.png"); 
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  background: transparent;
+  border: none;
+}
+
 .heroImage {
   width: 60px;
   height: 60px;
@@ -52,7 +91,8 @@
   border-radius: 50%;
   z-index: 2;
   animation: heroPulse 1.5s infinite ease-in-out;
-}
+} */
+
 .heroIcon {
   font-size: 60px; /* для React-іконок */
   line-height: 1;
@@ -62,8 +102,8 @@
 .star {
   /* content: */
   position: absolute;
-  width: 3px;
-  height: 3px;
+  width: 2px;
+  height: 2px;
   background: radial-gradient(circle, #fff8d6 0%, #ffd700 80%);
   border-radius: 50%;
   animation: starBlink 2s infinite ease-in-out;
@@ -169,11 +209,13 @@
   animation-delay: 2s;
 }
 
-/* Анімація з появи з 20px вище */
+/* Анімація з появи з 40px нижче */
 @keyframes heroIntroMove {
   from {
     opacity: 0;
-    transform: translateY(-20px) scale(0.9);
+    transform: translateY(30px) scale(0.9);
+    /* ↑ ЦЕ місце регулює відстань старту героя.
+       Збільшуєш значення px → він починає нижче і піднімається далі. */
   }
   to {
     opacity: 1;
@@ -204,3 +246,6 @@
     transform: scale(0.8);
   }
 }
+
+/* box-shadow: 0 0 12px #fff8d6;  */
+/* filter: drop-shadow(0 0 6px #fff8d6); */
