--- a/src/components/WinModalFirst/WinModalFirst.module.css
+++ b/src/components/WinModalFirst/WinModalFirst.module.css
@@ -1,7 +1,7 @@
 /* WinModal.module.css */
 .loadingWrapper {
   position: fixed;
-  top: 5px;
+  top: 0;
   left: 0;
   width: 840px;
   height: 380px;
@@ -58,8 +58,8 @@
 }
 
 .star {
-  width: 6px;
-  height: 6px;
+  width: 8px;
+  height: 8px;
   background: yellow;
   clip-path: polygon(
     50% 0%,
@@ -74,6 +74,15 @@
     39% 35%
   );
 }
+
+/* .heart {
+  width: 20px;
+  height: 20px;
+  background: pink;
+  clip-path: path(
+    "M24 4C21-3 13-3 10 4 7-3-1-3-4 4-8 13 12 29 12 29S32 13 28 4z"
+  );
+} */
 
 @keyframes fallConfetti {
   0% {
