add new android prod build

--- a/src/components/GameStatusLoading/GameStatusLoading.module.css
+++ b/src/components/GameStatusLoading/GameStatusLoading.module.css
@@ -60,3 +60,5 @@
   border: none;
   border-radius: 50px;
 }
+
+/* C:\Users\dream machines\Documents\GitHubGame_Tic_Tac_toeReact_Lytvynenko\android\app\build\outputs\apk\debug\app-debug.apk */
