--- a/src/components/TicTacToeGame/TicTacToeGame.module.css
+++ b/src/components/TicTacToeGame/TicTacToeGame.module.css
@@ -455,19 +455,19 @@
 }
 .buttonSection {
   position: absolute;
-  right: 30px;
+  right: 55px;
   bottom: 150px;
   width: 50px;
   height: 50px;
   border-radius: 50%;
   background: linear-gradient(180deg, #c780ff 0%, #7500d1 100%);
-  display: flex; /* для центрування кнопки всередині */
+  display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .button {
-  width: 100%; /* тепер кнопка займає всю секцію */
+  width: 100%;
   height: 100%;
   border-radius: 50%;
   display: flex;
