--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,28 +1,35 @@
 /* style */
 .container {
+  width: 320px;
+  height: 780px;
   position: fixed;
   top: 0;
   left: 0;
-  right: 10;
-  width: 820px;
-  height: 370px;
-  display: flex;
   justify-content: center;
   align-items: center;
-  background: url("/src/assets/emages/Frame_baground_start.png.png")
-    center/cover no-repeat;
-  padding: 10px;
-  box-sizing: border-box;
+  background: url("/src/assets/emages/BacgrBlue.png") calc(50% - 20px)
+      center/cover no-repeat,
+    url("/src/assets/emages/MaskStars.png") center/cover no-repeat;
 }
 
 .gameStart {
-  width: 100px;
-  height: 100px;
+  width: 120px;
+  height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 50%; /* кругла форма */
-  transform: translateY(40px); /* зміщення вниз */
+  background-color: rgb(0, 162, 255);
+  border: #fafafa;
+  border: 2px;
+  border-radius: 30px; /* кругла форма */
+  /* transform: translateY(40px);  */
+  font-weight: 600;
+  font-style: SemiBold;
+  font-size: 48px;
+  line-height: 80%;
+  letter-spacing: 0;
+  text-align: center;
+  color: #fafafa;
 }
 
 .card {
@@ -39,6 +46,26 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.title {
+  margin-top: 0px;
+  display: inline-block; /* щоб ширина була по тексту */
+  padding-top: 70px;
+  padding-bottom: 70px;
+  padding-left: 90px;
+  padding-right: 90px;
+  font-family: Fredoka;
+  font-weight: 600;
+  font-style: SemiBold;
+  font-size: 48px;
+  line-height: 80%;
+  letter-spacing: 0;
+  text-align: center;
+  color: #fafafa;
+  background: url("/src/assets/emages/TitleBagrPhone.png") center center
+    no-repeat;
+  background-size: contain; /* фон підлаштується під розмір блоку */
 }
 
 .titleGlow {
